--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,17 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.10</version>
                 <configuration>
+                	<skip>false</skip>
+                <includes>
+                	<include>**/When*.java</include>
+                	<include>**/*Test.java</include>
+                </includes>
+				<excludes>
+					<exclude>%regex[.*integration.*]</exclude>
+				</excludes>
+                </configuration>
+                <!-- 
+                <configuration>
                     <skip>true</skip>
                 </configuration>
                 <executions>
@@ -71,8 +82,10 @@
                         </configuration>
                     </execution>
                 </executions>
+                -->
             </plugin>
             <!-- CODE COVERAGE -->
+            <!-- 
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
@@ -94,7 +107,7 @@
                     </execution>
                 </executions>
             </plugin>
-
+			-->
             <plugin>
                 <artifactId>maven-release-plugin</artifactId>
                 <version>2.2</version>
